--- a/Renta/templates/panel/dash_base.html
+++ b/Renta/templates/panel/dash_base.html
@@ -79,18 +79,19 @@
                             <form role="search" class="app-search d-none d-md-block mr-3">
                                 <input type="text" placeholder="Buscar..." class="form-control mt-0">
                                 <a href="" class="active">
-                                    <i class="fa fa-search"></i>
+                                    <i class="fas fa-search"></i>
                                 </a>
                             </form>
                         </li>
-                        <!-- ============================================================== -->
-                        <!-- User profile and search -->
-                        <!-- ============================================================== -->
                         <li>
                             <a class="profile-pic" href="#">
                                 <img src="{% static 'img/principe.png' %}" alt="user-img" width="36"
                                     class="img-circle"><span class="text-white font-medium">{{user}}</span></a>
                         </li>
+                        <!-- ============================================================== -->
+                        <!-- User profile and search -->
+                        <!-- ============================================================== -->
+                       
                         <!-- ============================================================== -->
                         <!-- User profile and search -->
                         <!-- ============================================================== -->
@@ -154,6 +155,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
                  <!--   <h4 class="page-title text-uppercase font-medium font-14"><a href="">Autos</a> </h4>  -->   
+                
                     </div>
                  
                     
@@ -163,8 +165,11 @@
                                 
                             </ol>
                             <a href="{% url 'car_app:List_car' %}" target="_blank" style="background-color: #3d6cb9;border-color: #3d6cb9;"
-                                class="btn btn-danger  d-none d-md-block pull-right m-l-20 hidden-xs hidden-sm waves-effect waves-light"><i class="fas fa-sign-out-alt"></i> </a>
+                                class="btn btn-danger  d-none d-md-block pull-right m-l-20 hidden-xs hidden-sm waves-effect waves-light">
+                                <i class="fas fa-sign-out-alt"></i> </a>
+                                
                         </div>
+                       
                     </div>
                 </div>
                 <!-- /.col-lg-12 -->
