--- a/Renta/templates/panel/profile.html
+++ b/Renta/templates/panel/profile.html
@@ -4,10 +4,6 @@
 
 {% block dash %}
 
-
-  
-
-
         <div class="container-fluid">
             <!-- ============================================================== -->
             <!-- Start Page Content -->
@@ -15,18 +11,23 @@
             <!-- Row -->
             <div class="row">
                 <!-- Column -->
+           
                 <div class="col-lg-4 col-xlg-3 col-md-12">
                     <div class="white-box">
+                      
                         <div class="user-bg">
+                          
                             <div class="overlay-box">
-                                <div class="user-content">
-                                    <a href="javascript:void(0)"><img src="{% static 'img/principe.png' %}"
+                                <div class="user-content"><img src="" alt="">
+                                    <a href="javascript:void(0)"><img src="{{per.avatar.url}}"
                                             class="thumb-lg img-circle" alt="img"></a>
                                     <h4 class="text-white mt-2">{{user}}</h4>
-                                    <h5 class="text-white mt-2">{{form.email}}</h5>
+                                    <h5 class="text-white mt-2">{{email}}</h5>
                                 </div>
                             </div>
+                          
                         </div>
+                   
                         <div class="user-btm-box mt-5 d-md-flex">
                             <div class="d-grid gap-2 mx-auto">
                                 <a href="{% url 'users_app:update-p' %}" class="btn btn-primary" tabindex="-1" role="button" aria-disabled="true">Actualizar contraseña</a>
@@ -35,61 +36,60 @@
                         </div>
                     </div>
                 </div>
+
+
                 <!-- Column -->
                 <!-- Column -->
                 <div class="col-lg-8 col-xlg-9 col-md-12">
+                    <p class="font-weight-bold text-center"> Datos de domicilio</p>
+                 
                     <div class="card">
                         <div class="card-body">
                             <form class="form-horizontal form-material">
                                 <div class="form-group mb-4">
-                                    <label class="col-md-12 p-0">Nombres</label>
+                                    <label class="col-md-12 p-0">Edad</label>
                                     <div class="col-md-12 border-bottom p-0">
-                                        <input type="text" placeholder="Johnathan Doe"
-                                            class="form-control p-0 border-0"> </div>
-                                </div>
-                                <div class="form-group mb-4">
-                                    <label class="col-md-12 p-0">Apellidos</label>
-                                    <div class="col-md-12 border-bottom p-0">
-                                        <input type="text" placeholder="Santiago Anzures"
-                                            class="form-control p-0 border-0"> </div>
-                                </div>
-                                <div class="form-group mb-4">
-                                    <label for="example-email" class="col-md-12 p-0">Correo</label>
-                                    <div class="col-md-12 border-bottom p-0">
-                                        <input type="email" placeholder="johnathan@gmail.com"
-                                            class="form-control p-0 border-0" name="example-email"
-                                            id="example-email">
-                                    </div>
+                                        {{form.edad}}
                                 </div>
                                 
                                 <div class="form-group mb-4">
                                     <label class="col-md-12 p-0">Numero de telefono</label>
                                     <div class="col-md-12 border-bottom p-0">
-                                        <input type="text" placeholder="123 456 7890"
-                                            class="form-control p-0 border-0">
+                                     <!--  <input type="text" placeholder="123 456 7890"
+                                        class="form-control p-0 border-0"> -->  
+                                        {{form.telefono}} 
                                     </div>
                                 </div>
                                 <div class="form-group mb-4">
                                     <label class="col-md-12 p-0">Ciudad</label>
                                     <div class="col-md-12 border-bottom p-0">
-                                        <input type="text" placeholder="Tuxpan,Ver."
-                                            class="form-control p-0 border-0">
+                                        {{form.ciudad}}
                                     </div>
                                 </div>
                                 <div class="form-group mb-4">
                                     <label class="col-md-12 p-0">Direccion</label>
                                     <div class="col-md-12 border-bottom p-0">
-                                        <input type="text" placeholder="Calle 8 de Mayo Col.Retiro"
-                                            class="form-control p-0 border-0">
+                                      <!-- <input type="text" placeholder="Calle 8 de Mayo Col.Retiro"
+                                            class="form-control p-0 border-0">  -->  
+                                            {{form.direccion}}
+                                    </div>
+                                </div>
+
+                                <div class="form-group mb-4">
+                                    <label class="col-md-12 p-0">Codigo Postal</label>
+                                    <div class="col-md-12 border-bottom p-0">
+                                      <!-- <input type="text" placeholder="Calle 8 de Mayo Col.Retiro"
+                                            class="form-control p-0 border-0">  -->  
+                                            {{form.cp}}
                                     </div>
                                 </div>
                                
-                               
+                       
 
                                 <div class="form-group mb-4">
                                     <div class="col-sm-12">
                                         <button class="btn btn-success" 
-                                        style="background-color: #f8b400;border-color: #f8b400;" >Actualizar perfil
+                                        style="background-color: #f8b400;border-color: #f8b400;" >Actualizar datos
                                        </button>
                                     </div>    
                                 </div>
@@ -102,23 +102,6 @@
                 </div>
                 <!-- Column -->
             </div>
-            <!-- Row -->
-            <!-- ============================================================== -->
-            <!-- End PAge Content -->
-            <!-- ============================================================== -->
-            <!-- ============================================================== -->
-            <!-- Right sidebar -->
-            <!-- ============================================================== -->
-            <!-- .right-sidebar -->
-            <!-- ============================================================== -->
-            <!-- End Right sidebar -->
-            <!-- ============================================================== -->
-        </div>
-        
-  
-
-
-
 
 {% endblock dash %}
    
