--- a/Renta/templates/panel/dash_base.html
+++ b/Renta/templates/panel/dash_base.html
@@ -115,7 +115,7 @@
                         <!-- User Profile-->
                       
                         <li class="sidebar-item">
-                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="{% url 'users_app:profile' %}"
+                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href=""
                                 aria-expanded="false">
                                 <i class="fa fa-user" aria-hidden="true"></i>
                                 <span class="hide-menu">Perfil</span>
