--- a/Renta/templates/panel/auto-op.html
+++ b/Renta/templates/panel/auto-op.html
@@ -1,13 +1,8 @@
-
-{% extends '' %}
+{% extends 'panel/dash_base.html' %}
 {% load static %}
 
 
-
 {% block dash %}
-
-
-
 
 <div class="container-fluid">
     
@@ -19,7 +14,7 @@
             <div class="col-sm-8">
                 <div class="card card-cascade wider shadow p-3 mb-5 ">
                     <!--Card image-->
-                    <div class="view view-cascade overlay text-center"> <img class="card-img-top" src="https://i.imgur.com/oFDjIvN.png" alt=""> <a>
+                    <div class="view view-cascade overlay text-center"> <img class="card-img-top" src="{{ op.nombres.imagen.url }}" alt=""> <a>
                             <div class="mask rgba-white-slight"></div>
                         </a> </div>
                     <!--Product Description-->
@@ -28,35 +23,35 @@
                         <div class="row subRow">
                             <!--Column for Data-->
                             <div class="col">
-                                <p class="text-muted row1">Milage</p>
-                                <p class="row2">100 KM</p>
+                                <p class="text-muted row1">Color</p>
+                                <p class="row2">{{ op.color }}</p>
                             </div>
                             <!--Column for Data-->
                             <div class="col">
-                                <p class="text-muted row1">Transmission</p>
-                                <p class="row2">Mannual</p>
+                                <p class="text-muted row1">Transmicion</p>
+                                <p class="row2">{{ op.transmision }}</p>
                             </div>
                             <!--Column for Data-->
                             <div class="col">
-                                <p class="text-muted row1">Drive Unit</p>
-                                <p class="row2">Front</p>
+                                <p class="text-muted row1">Puertas</p>
+                                <p class="row2">{{ op.puertas }}</p>
                             </div>
                         </div> <!-- 2nd Row for title-->
                         <div class="row subRow">
                             <!--Column for Data-->
                             <div class="col">
-                                <p class="text-muted row1">Body</p>
-                                <p class="row2">Coupe</p>
+                                <p class="text-muted row1">Cilindros</p>
+                                <p class="row2">{{ op.cilindros }}</p>
                             </div>
                             <!--Column for Data-->
                             <div class="col">
-                                <p class="text-muted row1">Color</p>
-                                <p class="row2">Black</p>
+                                <p class="text-muted row1">Tipo de Combustible</p>
+                                <p class="row2">{{ op.combustible }}</p>
                             </div>
                             <!--Column for Data-->
                             <div class="col">
-                                <p class="text-muted row1">Daily UI</p>
-                                <p class="row2">#002</p>
+                                <p class="text-muted row1">Tamaño</p>
+                                <p class="row2">{{ op.nombres.tamano }}</p>
                             </div>
                         </div>
                     </div>
@@ -69,28 +64,21 @@
                     <div class="card-body card-body-cascade">
                         <!--Card Description-->
                         <div class="card2decs">
-                            <p class="heading1"><strong>ZABHL90</strong></p>
-                            <p class="quantity">Qty <span class="float-right text1">30</span></p>
-                            <p class="subtotal">Subtotal<span class="float-right text1">$1,240</span></p>
-                            <p class="shipping">Shipping<span class="float-right text1">Free</span></p>
-                            <p class="promocode">Promo Code<span class="float-right text1">-$100</span></p>
-                            <p class="total"><strong>Total</strong><span class="float-right totalText1">$<span class="totalText2">1,140</span></span></p>
+                            <p class="heading1"><strong>{{op.nombres}}</strong></p>
+                            <p class="quantity">Marca<span class="float-right text1">{{ op.nombres.marca }}</span></p>
+                            <p class="subtotal">Modelo<span class="float-right text1">{{ op.nombres.modelo }}</span></p>
+                            <p class="shipping">Estado<span class="float-right text1">{{ op.nombres.get_estado_display }}</span></p>
+                            <p class="total"><strong>Precio</strong><span class="float-right totalText1">$<span class="totalText2">{{ op.nombres.precio }}</span></span></p>
                         </div>
-                        <div class="payment">
-                            <p class="heading2"><strong>Payment Details</strong></p>
-                            <p class="cardAndExpire">Card Number<span class="float-right">Expiry</span></p>
-                            <p class="cardAndExpireValue">161617161816188<span class="float-right">26/11</span></p>
-                            <p class="nameAndcvc" style="margin-bottom:-10px;">Cardholder name<span class="float-right">CVC</span></p>
-                            <p class="nameAndcvcValue">Mr. Example<span class="float-right">010</span></p>
-                        </div>
+                      
                         <!--Card footer--> <a href="" class="purchaseLink">
-                            <div class="card-footer text-center"> PURCHASE &#8594; </div>
+                            <div class="card-footer text-center"> Rentar &#8594; </div>
                         </a>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </div>  
     </div>
     
 
