--- a/Renta/templates/panel/profile.html
+++ b/Renta/templates/panel/profile.html
@@ -16,8 +16,15 @@
                           
                             <div class="overlay-box">
                                 <div class="user-content"><img src="" alt="">
+                                    {% if per.avatar %}
                                     <a href="javascript:void(0)"><img src="{{per.avatar.url}}"
                                             class="thumb-lg img-circle" alt="img"></a>
+                                    {% else %}
+                                    <a href="javascript:void(0)"><img src="{% static 'img/caballero.png' %}"
+                                        class="thumb-lg img-circle" alt="img"></a>
+                                    {% endif %}
+
+
                                     <h4 class="text-white mt-2">{{per.user}}</h4>
                                     <h5 class="text-white mt-2">{{per.user.email}}</h5>
                                    
