--- a/Renta/templates/panel/dash_base.html
+++ b/Renta/templates/panel/dash_base.html
@@ -130,7 +130,7 @@
                             </a>
                         </li>
                         <li class="sidebar-item">
-                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href=""
+                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="{% url 'car_app:paquete-auto' %}"
                                 aria-expanded="false">
                                 <i class="fas fa-umbrella-beach"></i>
                                 <span class="hide-menu">Paquetes</span>
