--- a/Renta/static/css/start.css
+++ b/Renta/static/css/start.css
@@ -1,35 +1,58 @@
-#form {
-    width: 250px;
-    margin: 0 auto;
-    height: 50px;
-  }
-  
-  #form p {
-    text-align: center;
-  }
-  
-  #form label {
-    font-size: 20px;
-  }
-  
-  input[type="radio"] {
-    display: none;
-  }
-  
-  label {
-    color: grey;
-  }
-  
-  .clasificacion {
-    direction: rtl;
-    unicode-bidi: bidi-override;
-  }
-  
-  label:hover,
-  label:hover ~ label {
-    color: orange;
-  }
-  
-  input[type="radio"]:checked ~ label {
-    color: orange;
-  }
+.rating {
+  background: #fff;
+}
+
+input[type="radio"] {
+  position: fixed;
+  top: 0;
+  right: 100%;
+}
+
+label {
+  font-size: 1.5em;
+  padding: 0.5em;
+  margin: 0;
+  float: left;
+  cursor: pointer;
+  -moz-transition: 0.2s;
+  -o-transition: 0.2s;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+input[type="radio"]:checked ~ input + label {
+  background: none;
+  color: #aaa;
+}
+
+input + label {
+  background: #fff;
+  color: orange;
+  margin: 0 0 1em 0;
+}
+
+input + label:first-of-type {
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+}
+
+input:checked + label {
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+
+hr {
+  clear: both;
+  border: 0;
+  border-top: 2px solid #999;
+  margin: 2em 0;
+}
+
+/* ----- DEMO STUFF ----- */
+body {
+  padding: 5% 10%;
+  line-height: 1.4;
+  background: #888;
+  color: #fff;
+  font-family: sans-serif;
+}
