--- a/Renta/templates/index.html
+++ b/Renta/templates/index.html
@@ -89,10 +89,6 @@
       </p>
     </div> 
     {% endif %}
-
-
-
-
     </div> 
 </div>
 </form>
@@ -123,24 +119,24 @@
           
                 <br><br>
                
-              </div>
               
+                <div class="rating">
+                  <input type="radio" name="test" id="one" checked />
+                  <label for="one"><i class="fa fa-star"></i></label>
+                  <input type="radio" name="test" id="two" />
+                  <label for="two"><i class="fa fa-star"></i></label>
+                  <input type="radio" name="test" id="three" />
+                  <label for="three"><i class="fa fa-star"></i></label>
+                  <input type="radio" name="test" id="four" />
+                  <label for="four"><i class="fa fa-star"></i></label>
+                  <input type="radio" name="test" id="five" />
+                  <label for="five"><i class="fa fa-star"></i></label>
+                </div>
+              
+        
+              </div>     
             </div>
-          
-            <form>
-              <p class="clasificacion">
-                <input id="radio1" type="radio" name="estrellas" value="5"><!--
-                --><label for="radio1">★</label><!--
-                --><input id="radio2" type="radio" name="estrellas" value="4"><!--
-                --><label for="radio2">★</label><!--
-                --><input id="radio3" type="radio" name="estrellas" value="3"><!--
-                --><label for="radio3">★</label><!--
-                --><input id="radio4" type="radio" name="estrellas" value="2"><!--
-                --><label for="radio4">★</label><!--
-                --><input id="radio5" type="radio" name="estrellas" value="1"><!--
-                --><label for="radio5">★</label>
-              </p>
-            </form>
+
             <a href="{% url 'car_app:description' lista.nombres.id %}"> <span class="tag is-link is-light">Ver mas...</span></a>
           </div>
          
@@ -188,6 +184,7 @@
       </div>
     </div>
   </div>
+
   <nav class="level mb-6 mt-6">
     <div class="level-item has-text-centered">
       <div>
