--- a/Renta/templates/panel/paquete-panel.html
+++ b/Renta/templates/panel/paquete-panel.html
@@ -32,7 +32,7 @@
                         <li class="list-inline-item m-0"><i class="fa fa-star text-success"></i></li>
                         <li class="list-inline-item m-0"><i class="fa fa-star text-success"></i></li>
                         <li class="list-inline-item m-0"><i class="fa fa-star text-success"></i></li>
-                        <li class="list-inline-item m-0"><i class="fa fa-star-o text-success"></i></li>
+                        <li class="list-inline-item m-0"><i class="fa fa-star text-success"></i></li>
                     </ul>
                 </div>
             </div>
