--- a/Renta/templates/panel/auto-panel.html
+++ b/Renta/templates/panel/auto-panel.html
@@ -73,6 +73,8 @@
                             </div>
                         </div>
                     </div>
+
+
                     <div class="col-lg-4 col-md-12 col-sm-12">
                         <div class="card">
                             <div class="card-heading">
@@ -82,11 +84,11 @@
                                 <ul class="chatonline">
                                     <li>
                                         <div class="call-chat">
-                                            <button class="btn btn-info btn-circle btn" type="button">
+                                            <a href="{% url 'car_app:auto-ni' %}"> <button class="btn btn-info btn-circle btn" type="button">
                                                 <i class="fas fa-plus-circle"></i>
-                                            </button>
+                                             </button></a> 
                                         </div>
-                                        <a href="javascript:void(0)" class="d-flex align-items-center"><img
+                                        <a href="#" class="d-flex align-items-center"><img
                                                 src=" {% static 'img/nissan.png' %} " alt="user-img" class="img-circle">
                                             <div class="ml-2">
                                                 <span class="text-dark text-muted">Nissan</span>
@@ -96,11 +98,11 @@
                                     <li>
                                         <div class="call-chat">
                                             
-                                            <button class="btn btn-info btn-circle btn" type="button">
+                                            <a href="{% url 'car_app:auto-ho' %}"> <button class="btn btn-info btn-circle btn" type="button">
                                                 <i class="fas fa-plus-circle"></i>
-                                            </button>
+                                             </button></a> 
                                         </div>
-                                        <a href="javascript:void(0)" class="d-flex align-items-center"><img
+                                        <a href="#" class="d-flex align-items-center"><img
                                                 src="{% static 'img/honda.png' %} " alt="user-img" class="img-circle">
                                             <div class="ml-2">
                                                 <span class="text-dark text-muted">Honda
@@ -111,11 +113,11 @@
                                     <li>
                                         <div class="call-chat">
                                            
-                                            <button class="btn btn-info btn-circle btn" type="button">
+                                            <a href="{% url 'car_app:auto-to' %}"> <button class="btn btn-info btn-circle btn" type="button">
                                                 <i class="fas fa-plus-circle"></i>
-                                            </button>
+                                             </button></a> 
                                         </div>
-                                        <a href="javascript:void(0)" class="d-flex align-items-center"><img
+                                        <a href="#" class="d-flex align-items-center"><img
                                                 src="{% static 'img/toyota.png' %} " alt="user-img" class="img-circle">
                                             <div class="ml-2">
                                                 <span class="text-dark text-muted">Toyota
@@ -126,11 +128,11 @@
                                     <li>
                                         <div class="call-chat">
                                             
-                                            <button class="btn btn-info btn-circle btn" type="button">
-                                                <i class="fas fa-plus-circle"></i>
-                                            </button>
+                                          <a href="{% url 'car_app:auto-fo' %}"> <button class="btn btn-info btn-circle btn" type="button">
+                                               <i class="fas fa-plus-circle"></i>
+                                            </button></a> 
                                         </div>
-                                        <a href="javascript:void(0)" class="d-flex align-items-center"><img
+                                        <a href="#"  class="d-flex align-items-center"><img
                                                 src="{% static 'img/ford.png' %}" alt="user-img" class="img-circle">
                                             <div class="ml-2">
                                                 <span class="text-dark text-muted">Ford
@@ -142,6 +144,9 @@
                             </div>
                         </div>
                     </div>
+
+
+                    
                 </div>
 
 
